--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
+spring.data.mongodb.uri=mongodb+srv://superAdmin:1234@cluster0.tqlj5.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=moviesDB
 
