--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.uri=mongodb+srv://superAdmin:12345@cluster0.tqlj5.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=moviesDB
+server.port=8080
 
